blog/infra/k8s/client-depl.yaml
apiVersion: apps/v1 #version 1.
kind: Deployment #deployment type
metadata: # Sets the name for this deployment resource
  name: client-depl  
spec:      #The specification for the deployment configuration
  replicas: 1 #number of identical pods Kubernetes should keep running for this deployment
  selector: #Specifies how Kubernetes will identify the pods managed by this deployment.
    matchLabels: 
      app: client # link the deployment to a specific set of pods that it will control, restart, or scale as needed.
  template: #Defines the pod template for the deployment.
    metadata: #Sets labels for the pod created by this deployment.
      labels: #The label app: client allows Kubernetes to identify these pods and link them to the deployment based on the matchLabels selector.
        app: client
    spec: #Contains details of the pod’s configuration.
      containers:
        - name: client 
          image: oussema62/client
--- #for create other thing in the container
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
