blog/infra/k8s/comments-depl.yaml
apiVersion: apps/v1 #version 1.
kind: Deployment #deployment type
metadata: # Sets the name for this deployment resource
  name: comments-depl  
spec:      #The specification for the deployment configuration
  replicas: 1 #number of identical pods Kubernetes should keep running for this deployment
  selector: #Specifies how Kubernetes will identify the pods managed by this deployment.
    matchLabels: 
      app: comments # link the deployment to a specific set of pods that it will control, restart, or scale as needed.
  template: #Defines the pod template for the deployment.
    metadata: #Sets labels for the pod created by this deployment.
      labels: #The label app: comments allows Kubernetes to identify these pods and link them to the deployment based on the matchLabels selector.
        app: comments
    spec: #Contains details of the pod’s configuration.
      containers:
        - name: comments 
          image: oussema62/comments
          ports:
            - containerPort: 4001
--- #for create other thing in the container
apiVersion: v1
kind: Service
metadata:
  name: comments-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
