blog/infra/k8s/moderation-depl.yaml
apiVersion: apps/v1 #version 1.
kind: Deployment #deployment type
metadata: # Sets the name for this deployment resource
  name: moderation-depl  
spec:      #The specification for the deployment configuration
  replicas: 1 #number of identical pods Kubernetes should keep running for this deployment
  selector: #Specifies how Kubernetes will identify the pods managed by this deployment.
    matchLabels: 
      app: moderation # link the deployment to a specific set of pods that it will control, restart, or scale as needed.
  template: #Defines the pod template for the deployment.
    metadata: #Sets labels for the pod created by this deployment.
      labels: #The label app: moderation allows Kubernetes to identify these pods and link them to the deployment based on the matchLabels selector.
        app: moderation
    spec: #Contains details of the pod’s configuration.
      containers:
        - name: moderation 
          image: oussema62/moderation
--- #for create other thing in the container
apiVersion: v1
kind: Service
metadata:
  name: moderation-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
