blog/infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP            # Specifies that the protocol is TCP, which is the default for HTTP-based services.
      port: 4000               # The port on the Service itself that other services in the cluster will use to access this Service (internal cluster access).
      targetPort: 4000         # The port on the Pod where the posts application is running. Traffic directed to the Service port (4000) is forwarded to this Pod port.
